@@ -9,6 +9,9 @@ PHP                                                                        NEWS
   . Fixed bug #60665 (call to empty() on NULL result using PDO::FETCH_LAZY
     returns false). (cmb)
 
+- Standard:
+  . Fixed bug #72823 (strtr out-of-bound access). (cmb)
+
 18 Aug 2016, PHP 5.6.25
 
 - Core:
